# SpotifyStats

./: .gitignore  Cargo.toml  build.rs  database.db  output.txt  output_backup.txt
.github/workflows/: deploy.yml
assets/: dashboard.html  index.html  login.html  logout.html  signup.html  signup2.html
assets/static/css/: globaldefaults.css
assets/static/js/: tokenrefresh.js
src/: main.rs
src/modules/: mod.rs
src/modules/database/: album_info.rs  artist_info.rs  listen_history_info.rs  logintoken_info.rs  mod.rs  oauth_info.rs  profile_info.rs  track_info.rs
src/modules/database/logintoken_info/: mod.rs
src/modules/database/oath_info/: mod.rs
src/modules/database/profile_info/: mod.rs
src/modules/encryption/: loginnonce.rs  logintoken.rs  mod.rs
src/modules/encryption/loginnonce/: mod.rs
src/modules/encryption/logintoken/: mod.rs
src/modules/scraper/: mod.rs
src/modules/webserver/: mod.rs  mod_backup.rs
