[package]
name = "aaronsspotifystats"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
chrono = "0.4.39"
dotenv = "0.15.0"
reqwest = "0.12.12"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"

[build-dependencies]
walkdir = "2.5.0"
