[package]
name = "aaronsspotifystats"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
base64 = "0.22.1"
chrono = "0.4.39"
dotenv = "0.15.0"
lazy_static = "1.5.0"
pem = "3.0.4"
pkcs8 = "0.10.2"
rand = "0.8.5"
reqwest = "0.12.12"
rsa = "0.9.7"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
walkdir = "2.5.0"
