[package]
name = "aaronsspotifystats"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] } # Used for web server
axum-extra = { version = "0.10.0", features = ["cookie"] } # Used for CookieJar extractor
base64 = "0.22.1"
chrono = "0.4.39" # Used for timestamping
dotenv = "0.15.0" # Used for loading .env files to runtime environment variables
lazy_static = "1.5.0" # Used for global static variables
pem = "3.0.4" # Used to turn RSA into String format
pkcs8 = "0.10.2"
rand = "0.8.5"
reqwest = "0.12.12" # Used for fetching
rsa = "0.9.7"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.134"
sha2 = "0.10.8" # Used for fast hashing algorithm
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
walkdir = "2.5.0" # Used to recursively walk a directory to copy /assets into target /assets
